# complex-scene-person-reid

./: .gitignore  README.md  README_zh.md  pyproject.toml
configs/: deit_base_patch16_global_local_sie_part_msmt17_384.yaml  deit_small_patch16_global_local_msmt17.yaml  deit_small_patch16_global_local_sie_part_msmt17.yaml  osnet_x1_0_ce_triplet_pretrained_market1501.yaml  osnet_x1_0_ce_triplet_pretrained_msmt17.yaml  osnet_x1_0_ce_triplet_pretrained_msmt17_40ep.yaml  osnet_x1_0_ce_triplet_pretrained_vc_clothes.yaml  resnet50_ce_market1501.yaml  resnet50_ce_pretrained_market1501.yaml  resnet50_ce_pretrained_msmt17.yaml  resnet50_ce_pretrained_msmt17_random_erasing.yaml  resnet50_ce_pretrained_vc_clothes.yaml  resnet50_ce_smoke.yaml  resnet50_ce_triplet_pretrained_msmt17.yaml  resnet50_ce_triplet_pretrained_msmt17_random_erasing.yaml
reid/: __init__.py
reid/data/: __init__.py  common.py  dataloader.py  market1501.py  msmt17.py  occluded_reid.py  samplers.py  transforms.py  vc_clothes.py
reid/engine/: __init__.py  evaluate.py  train.py
reid/evaluation/: __init__.py  distance.py  metrics.py  rerank.py
reid/losses/: __init__.py  classification.py  triplet.py
reid/models/: __init__.py  osnet_reid.py  registry.py  resnet_reid.py  vit_reid.py
scripts/: evaluate.py  train.py  train_resnet_ce.sh
tests/: test_data_pipeline.py  test_distance.py  test_evaluation_engine.py  test_losses.py  test_market1501.py  test_metrics.py  test_multiprocessing.py  test_osnet_reid.py  test_reid_datasets.py  test_resnet_reid.py  test_samplers.py  test_training_smoke.py  test_vit_reid.py
(+4 files in other folders)
