[project]
name = "final-project"
version = "0.1.0"
description = "Computer vision final project"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.24",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "tensorboard>=2.15",
    "tqdm>=4.66",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

mac = [
    "torch>=2.3",
    "torchvision>=0.18",
]

cuda = [
    "torch>=2.3",
    "torchvision>=0.18",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
torchvision = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.workspace]
members = []
